--- a/src/template/index.html
+++ b/src/template/index.html
@@ -7,6 +7,49 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
+    <div class="header">
+        <div class="container">
+            <%= htmlWebpackPlugin.options.title %>
+        </div>
+    </div>
+    <div class="container">
+        <div class="_grid _spacer _spacer--df">
+            <div class="_cell _cell--12 _md:cell--5 _lg:cell--4">
+                <h2>Категории</h2>
+                <form class="_owl _owl--lg">
+                    <div class="filter-set">
+                        <div class="filter-set__name">Бренд</div>
+                        <div class="_owl _owl--df">
+                            <label class="filter-label">
+                                <input type="checkbox">
+                                <span>XXX</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="filter-set">
+                        <div class="filter-set__name">Бренд</div>
+                        <div class="_owl _owl--df">
+                            <label class="filter-label">
+                                <input type="checkbox">
+                                <span>XXX</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="filter-set">
+                        <div class="filter-set__name">Бренд</div>
+                        <div class="_owl _owl--df">
+                            <label class="filter-label">
+                                <input type="checkbox">
+                                <span>XXX</span>
+                            </label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="_cell _cell--12 _md:cell--7 _lg:cell--8">
 
+            </div>
+        </div>
+    </div>
 </body>
 </html>
