--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,5 @@
 @import 'components/filter-label';
 @import 'components/filter-set';
 @import 'components/header';
+@import 'components/input';
+@import 'components/select';
