--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,8 @@
 @import "~microbe-ui/src/components/spacer";
 @import "~microbe-ui/src/components/owl";
 @import "~microbe-ui/src/helpers/gutters";
+@import "~microbe-ui/src/helpers/flex";
+@import "~microbe-ui/src/helpers/text-align";
 
 @import 'core/elements';
 @import 'components/container';
