--- a/src/sass/components/select.scss
+++ b/src/sass/components/select.scss
@@ -5,6 +5,7 @@
 	padding: 0.5rem;
 	width: 100%;
 	font-size: microbe-rem(14);
+	border-radius: 0.25em;
 
 	&:hover {
 		background-color: $background-hover;
