--- a/src/template/index.html
+++ b/src/template/index.html
@@ -16,7 +16,7 @@
         <div class="_grid _spacer _spacer--df">
             <div class="_cell _cell--12 _md:cell--5 _lg:cell--3">
                 <h2>Категории</h2>
-                <form class="_owl _owl--df">
+                <form id="filter" class="_owl _owl--df _pt-df">
                     <div class="filter-set">
                         <div class="filter-set__name">Бренд</div>
                         <div class="filter-set__controls">
@@ -38,7 +38,7 @@
                         <div class="filter-set__name">Mарка</div>
                         <div class="filter-set__controls">
                             <select name="marka" class="select">
-                                <option>Обрати</option>
+                                <option>Выбрать</option>
                                 <option value="1">Accusamus ad consectetur</option>
                                 <option value="2">Aliquid consequatur</option>
                                 <option value="3">Aliquid architecto</option>
@@ -51,7 +51,7 @@
                         <div class="filter-set__name">Модель</div>
                         <div class="filter-set__controls">
                             <select name="filter-model" class="select">
-                                <option>Обрати</option>
+                                <option>Выбрать</option>
                                 <option value="1">Lorem ipsum dolor</option>
                                 <option value="2">Neque, officia</option>
                                 <option value="3">Amet asperiores</option>
@@ -64,24 +64,56 @@
                         <div class="filter-set__controls">
                             <div class="_grid _grid--2 _spacer _spacer--md">
                                 <div class="_cell">
-                                    <small>От</small>
-                                    <input name="price-from" type="number"
-                                           class="input _mt-xs"
-                                           value="1000">
+                                    <div class="_owl _owl--xs">
+                                        <small>От</small>
+                                        <input name="price-from" type="number"
+                                               class="input _mt-xs"
+                                               value="1000">
+                                    </div>
                                 </div>
                                 <div class="_cell">
-                                    <small>До</small>
-                                    <input name="price-to" type="number"
-                                           class="input _mt-xs"
-                                           value="600000">
+                                    <div class="_owl _owl--xs">
+                                        <small>До</small>
+                                        <input name="price-to" type="number"
+                                               class="input _mt-xs"
+                                               value="600000">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="_cell _cell--12 _md:cell--7 _lg:cell--3">
+            <div class="_cell _cell--12 _md:cell--7 _lg:cell--9">
+                <div class="_owl _owl--df">
+                    <div class="_grid _grid--auto _spacer _spacer--md _justify-end">
+                    <div class="_cell">
+                        <div class="_owl _owl--xs">
+                            <small>Сортировать:</small>
+                            <select name="sort" class="select" form="filter">
+                                <option value="1">От дешевых к дорогим</option>
+                                <option value="2">От дорогих к дешевым</option>
+                                <option value="3">По названию</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="_cell">
+                        <div class="_owl _owl--xs">
+                            <small>Кол-во элементов на страницу:</small>
+                            <select name="per_page" class="select" form="filter">
+                                <option value="1">10</option>
+                                <option value="2">20</option>
+                                <option value="2">50</option>
+                                <option value="2">100</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
 
+                    <!-- КАРТОЧКИ -->
+                    <!-- 6шт. -->
+
+                </div>
             </div>
         </div>
     </div>
