Добавляет карточки товаров

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "~microbe-ui/src/helpers/text-align";
 
 @import 'core/elements';
+@import 'components/card';
 @import 'components/container';
 @import 'components/filter-label';
 @import 'components/filter-set';
