--- a/src/template/index.html
+++ b/src/template/index.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="_grid _spacer _spacer--df">
+        <div class="_grid _spacer _spacer--xl">
             <div class="_cell _cell--12 _md:cell--5 _lg:cell--3">
                 <h2>Категории</h2>
                 <form id="filter" class="_owl _owl--df _pt-df">
@@ -22,28 +22,28 @@
                         <div class="filter-set__controls">
                             <label class="filter-label">
                                 <input type="checkbox" name="brand" value="1">
-                                <span>Lorem ipsum</span>
+                                <span>ELIGOR</span>
                             </label>
                             <label class="filter-label">
                                 <input type="checkbox" name="brand" value="2">
-                                <span>Ad aliquam animi</span>
+                                <span>MSMODELS</span>
                             </label>
                             <label class="filter-label">
                                 <input type="checkbox" name="brand" value="3">
-                                <span>explicabo facilis</span>
+                                <span>SCHUCO</span>
                             </label>
                         </div>
                     </div>
                     <div class="filter-set">
-                        <div class="filter-set__name">Mарка</div>
+                        <div class="filter-set__name">Производитель</div>
                         <div class="filter-set__controls">
                             <select name="marka" class="select">
                                 <option>Выбрать</option>
-                                <option value="1">Accusamus ad consectetur</option>
-                                <option value="2">Aliquid consequatur</option>
-                                <option value="3">Aliquid architecto</option>
-                                <option value="4">Cumque eius id modi</option>
-                                <option value="5">At corporis eaque fugit</option>
+                                <option value="1">Наш автопром</option>
+                                <option value="2">V43</option>
+                                <option value="3">SSM</option>
+                                <option value="4">MATRIX</option>
+                                <option value="5">NOREV</option>
                             </select>
                         </div>
                     </div>
@@ -52,10 +52,11 @@
                         <div class="filter-set__controls">
                             <select name="filter-model" class="select">
                                 <option>Выбрать</option>
-                                <option value="1">Lorem ipsum dolor</option>
-                                <option value="2">Neque, officia</option>
-                                <option value="3">Amet asperiores</option>
-                                <option value="4">Ab accusantium amet</option>
+                                <option value="1">ГАЗ</option>
+                                <option value="2">ЗиЛ</option>
+                                <option value="3">BMW</option>
+                                <option value="4">Mercedes</option>
+                                <option value="4">Daimler</option>
                             </select>
                         </div>
                     </div>
@@ -109,10 +110,152 @@
                         </div>
                     </div>
                 </div>
-
-                    <!-- КАРТОЧКИ -->
-                    <!-- 6шт. -->
-
+                <div class="_grid _spacer _spacer--xl">
+	                <div class="_cell _cell--6 _md:cell--4">
+		                <div class="card">
+			                <div class="card__top">
+				                <div class="card__brand">ELIGOR</div>
+				                <img src="images/model1.jpg" alt="ГАЗ-61 (4х4) (1939) H365" class="card__image">
+			                </div>
+			                <div class="card__bottom">
+				                <div class="_grid _justify-between _flex-nowrap _mb-sm">
+					                <div class="_gcell">
+						                <div class="card__manufacturer">Наш автопром</div>
+					                </div>
+					                <div class="_gcell">
+						                <div class="card__year">2000 год</div>
+					                </div>
+				                </div>
+								<div class="card__model _mb-sm">ГАЗ-61 (4х4) (1939) H365</div>
+				                <div class="_grid _justify-center">
+					                <div class="_gcell">
+										<div class="card__price">$200</div>
+					                </div>
+				                </div>
+			                </div>
+		                </div>
+	                </div>
+	                <div class="_cell _cell--6 _md:cell--4">
+		                <div class="card">
+			                <div class="card__top">
+				                <div class="card__brand">MSMODELS</div>
+				                <img src="images/model2.jpg" alt="ГАЗ-21И «Волга»" class="card__image">
+			                </div>
+			                <div class="card__bottom">
+				                <div class="_grid _justify-between _flex-nowrap _mb-sm">
+					                <div class="_gcell">
+						                <div class="card__manufacturer">V43</div>
+					                </div>
+					                <div class="_gcell">
+						                <div class="card__year">1983 год</div>
+					                </div>
+				                </div>
+				                <div class="card__model _mb-sm">ГАЗ-21И «Волга»</div>
+				                <div class="_grid _justify-center">
+					                <div class="_gcell">
+						                <div class="card__price">$1 000</div>
+					                </div>
+				                </div>
+			                </div>
+		                </div>
+	                </div>
+	                <div class="_cell _cell--6 _md:cell--4">
+		                <div class="card">
+			                <div class="card__top">
+				                <div class="card__brand">ELIGOR</div>
+				                <img src="images/model3.jpg" alt="ЗиЛ-138 газобалонный" class="card__image">
+			                </div>
+			                <div class="card__bottom">
+				                <div class="_grid _justify-between _flex-nowrap _mb-sm">
+					                <div class="_gcell">
+						                <div class="card__manufacturer">SSM</div>
+					                </div>
+					                <div class="_gcell">
+						                <div class="card__year">2003 год</div>
+					                </div>
+				                </div>
+				                <div class="card__model _mb-sm">ЗиЛ-138 газобалонный</div>
+				                <div class="_grid _justify-center">
+					                <div class="_gcell">
+						                <div class="card__price">$850</div>
+					                </div>
+				                </div>
+			                </div>
+		                </div>
+	                </div>
+	                <div class="_cell _cell--6 _md:cell--4">
+		                <div class="card">
+			                <div class="card__top">
+				                <div class="card__brand">MSMODELS</div>
+				                <img src="images/model4.jpg" alt="Daimler DB18 Empress by Hooper" class="card__image">
+			                </div>
+			                <div class="card__bottom">
+				                <div class="_grid _justify-between _flex-nowrap _mb-sm">
+					                <div class="_gcell">
+						                <div class="card__manufacturer">MATRIX</div>
+					                </div>
+					                <div class="_gcell">
+						                <div class="card__year">1995 год</div>
+					                </div>
+				                </div>
+				                <div class="card__model _mb-sm">Daimler DB18 Empress by Hooper</div>
+				                <div class="_grid _justify-center">
+					                <div class="_gcell">
+						                <div class="card__price">$1 280</div>
+					                </div>
+				                </div>
+			                </div>
+		                </div>
+	                </div>
+	                <div class="_cell _cell--6 _md:cell--4">
+		                <div class="card">
+			                <div class="card__top">
+				                <div class="card__brand">SCHUCO</div>
+				                <img src="images/model5.jpg" alt="BMW 503" class="card__image">
+			                </div>
+			                <div class="card__bottom">
+				                <div class="_grid _justify-between _flex-nowrap _mb-sm">
+					                <div class="_gcell">
+						                <div class="card__manufacturer">MATRIX</div>
+					                </div>
+					                <div class="_gcell">
+						                <div class="card__year">1982 год</div>
+					                </div>
+				                </div>
+				                <div class="card__model _mb-sm">BMW 503</div>
+				                <div class="_grid _justify-center">
+					                <div class="_gcell">
+						                <div class="card__price">$990</div>
+					                </div>
+				                </div>
+			                </div>
+		                </div>
+	                </div>
+	                <div class="_cell _cell--6 _md:cell--4">
+		                <div class="card">
+			                <div class="card__top">
+				                <div class="card__brand">ELIGOR</div>
+				                <img src="images/model6.jpg" alt="Mercedes-Benz E-Class 200TE Station Wagon T-Model" class="card__image">
+			                </div>
+			                <div class="card__bottom">
+				                <div class="_grid _justify-between _flex-nowrap _mb-sm">
+					                <div class="_gcell">
+						                <div class="card__manufacturer">NOREV</div>
+					                </div>
+					                <div class="_gcell">
+						                <div class="card__year">1973 год</div>
+					                </div>
+				                </div>
+				                <div class="card__model _mb-sm">Mercedes-Benz E-Class 200TE Station Wagon T-Model</div>
+				                <div class="_grid _justify-center">
+					                <div class="_gcell">
+						                <div class="card__price">$2 155</div>
+					                </div>
+				                </div>
+			                </div>
+		                </div>
+	                </div>
+                </div>
                 </div>
             </div>
         </div>
