--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,10 @@
-@import "~microbe-ui/src/core";
-@import "~microbe-ui/src/components/module-grid";
-@import "~microbe-ui/src/components/spacer";
-@import "~microbe-ui/src/components/owl";
-@import "~microbe-ui/src/helpers/gutters";
-@import "~microbe-ui/src/helpers/flex";
-@import "~microbe-ui/src/helpers/text-align";
-
+@import '~microbe-ui/src/core';
+@import '~microbe-ui/src/components/module-grid';
+@import '~microbe-ui/src/components/spacer';
+@import '~microbe-ui/src/components/owl';
+@import '~microbe-ui/src/helpers/gutters';
+@import '~microbe-ui/src/helpers/flex';
+@import '~microbe-ui/src/helpers/text-align';
 @import 'core/elements';
 @import 'components/card';
 @import 'components/container';
