Добавляет скрипты финальной сборки

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="container">
 			<div class="_grid _spacer _spacer--xl">
-				<div class="_cell _cell--12 _md:cell--5 _lg:cell--3">
+				<div class="_cell _cell--12 _md:cell--4 _df:cell--3">
 					<h2>Категории</h2>
 					<form id="filter" class="_owl _owl--df _pt-df">
 						<div class="filter-set">
@@ -92,7 +92,7 @@
 						</div>
 					</form>
 				</div>
-				<div class="_cell _cell--12 _md:cell--7 _lg:cell--9">
+				<div class="_cell _cell--12 _md:cell--8 _df:cell--9">
 					<div class="_owl _owl--df">
 						<div class="_grid _grid--auto _spacer _spacer--md _justify-end">
 							<div class="_cell">
