--- a/src/sass/core/elements.scss
+++ b/src/sass/core/elements.scss
@@ -8,8 +8,13 @@ html {
 body {
 	padding: 0;
 	margin: 0;
-	background: $background-default;
 	box-sizing: border-box;
+	background: radial-gradient(#d8d8d8 15%, transparent 16%) 0 0,
+				radial-gradient(#dadada 15%, transparent 16%) 4px 4px,
+				radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 0 1px,
+				radial-gradient(rgba(255, 255, 255, .1) 15%, transparent 20%) 4px 5px;
+	background-color: #efefef;
+	background-size: 8px 8px;
 	-webkit-text-size-adjust: 100%;
 }
 
