Добавялет SEO блок + декторный элемент

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,4 +12,6 @@
 @import 'components/filter-set';
 @import 'components/header';
 @import 'components/input';
+@import 'components/section';
 @import 'components/select';
+@import 'components/wysiwyg';
