--- a/src/sass/components/filter-set.scss
+++ b/src/sass/components/filter-set.scss
@@ -1,6 +1,8 @@
 @import 'settings/all';
 
 .filter-set {
+	position: relative;
+	z-index: 2;
 	border-width: 0;
 	font-size: microbe-rem(14);
 	padding: microbe-em(20, 14);
@@ -12,4 +14,9 @@
 		font-style: italic;
 		margin-bottom: microbe-em(8, 16);
 	}
+}
+
+.sort {
+	position: relative;
+	z-index: 2;
 }
