--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -1,11 +1,17 @@
 @import 'settings/all';
 
 .card {
+	position: relative;
+	z-index: 2;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 	background-color: $background-surface;
 	border: 1px solid $border-default;
 	border-radius: 8px;
 
 	&:hover {
+		z-index: 1;
 		box-shadow: 0 0 microbe-rem(60) black;
 	}
 
@@ -16,6 +22,9 @@
 	}
 
 	&__bottom {
+		flex-grow: 1;
+		display: flex;
+		flex-direction: column;
 		padding: microbe-rem(16) microbe-rem(20) microbe-rem(10);
 		box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3);
 	}
