--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'components/filter-set';
 @import 'components/header';
 @import 'components/input';
+@import "components/pagination";
 @import 'components/section';
 @import 'components/select';
 @import 'components/wysiwyg';
