--- a/src/template/index.html
+++ b/src/template/index.html
@@ -130,8 +130,7 @@
                             <select
                                     id="filter-model"
                                     name="filter-model"
-                                    class="select form__control"
-                            >
+                                    class="select form__control">
                                 <option selected disabled>Выбрать</option>
                                 <option value="1">ГАЗ</option>
                                 <option value="2">ЗиЛ</option>
